--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="elvis villegas" />
-    <meta name="description" content="" />
+    <meta name="description" content="personal website using semantic html and css. no frameworks" />
+    <meta name="keywords" content="website, portfolio, elvis villegas, link in bio">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elvis Villegas</title>
@@ -45,7 +46,7 @@
       <div class="social-media-links">
         <ul>
           <li>
-            <a href="#" target="_blank"
+            <a href="pages/home.html" target="_blank"
               ><ion-icon name="globe-outline"></ion-icon>website</a
             >
           </li>
